@@ -112,10 +112,8 @@ libloris_la_SOURCES = $(CPP_SRC) $(PI_SRC)
 libloris_la_CPPFLAGS = $(INCLUDE_FFTW) $(default_includes)
 libloris_la_LIBADD = $(LINK_FFTW) $(CSOUND_LIB)
 
-# the library version for Loris 1.6 is 11:0:0
-# changes since vesion 1.6:
-# - improved cropping behavior
-libloris_la_LDFLAGS = -version-info 11:1:0 $(EXTRA_LD_FLAGS)
+# the library version for Loris 1.7 is 12:0:0
+libloris_la_LDFLAGS = -version-info 12:0:0 $(EXTRA_LD_FLAGS)
 
 # loris.h is generated automatically from loris.h.in
 nodist_include_HEADERS = loris.h
